# 5xcamp-bank-query

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  rollup.config.js
banks/: models.py  urls.py  views.py
banks/management/commands/: import_banks.py
banks/migrations/: 0001_initial.py  0002_remove_bank_address_remove_bank_branch_code_and_more.py  0003_branch_announcement_date_branch_manager_and_more.py  0004_rename_bank_name_branch_bank.py  0005_remove_branch_website_bank_address_and_more.py
core/: .env.example  settings.py  urls.py
seed/: 0001_bank.json
staticfiles/: staticfiles.json
staticfiles/scripts/: output.441047420620.js  output.js  output.js.447583163aba.map
staticfiles/styles/: output.css
templates/banks/: home.html
templates/shared/: base.html  footer.html  header.html
